# solana-sha256-hasher-optimized

./: Cargo.toml  README.md
src/: lib.rs  shani_hasher_optimized.rs
