[package]
name = "solana-sha256-hasher"
description = "Solana SHA256 hashing"
documentation = "https://docs.rs/solana-sha256-hasher"
version = "2.2.1"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
solana-hash = { version = "2.2.1", default-features = false }
log = { version = "0.4.25", optional = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
sha2 = "0.10.8"

[target.'cfg(target_os = "solana")'.dependencies]
# sha2 should be removed in the next breaking release,
# as there's no reason to use the crate instead of the syscall
# onchain
sha2 = { version = "0.10.8", optional = true }
solana-define-syscall = "2.2.1"

[features]
sha2 = ["dep:sha2"]
metrics = ["log"]

[dev-dependencies]
rand = "0.9.1"